WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285475
[WebGPU] Error from RenderPassEncoder and ComputePassEncoder is not propagating to the CommandEncoder
https://bugs.webkit.org/show_bug.cgi?id=285475
Summary
[WebGPU] Error from RenderPassEncoder and ComputePassEncoder is not propagati...
Mike Wyrzykowski
Reported
2025-01-06 14:52:53 PST
[WebGPU] Error from RenderPassEncoder and ComputePassEncoder is not propagating to the CommandEncoder
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-06 14:53:26 PST
<
rdar://problem/142440328
>
Mike Wyrzykowski
Comment 2
2025-01-06 15:01:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38606
EWS
Comment 3
2025-01-07 09:08:51 PST
Committed
288536@main
(1bf8507af834): <
https://commits.webkit.org/288536@main
> Reviewed commits have been landed. Closing PR #38606 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug