[WebGPU] Error from RenderPassEncoder and ComputePassEncoder is not propagating to the CommandEncoder https://bugs.webkit.org/show_bug.cgi?id=285475 rdar://142440328

Reviewed by Tadeu Zagallo.

Invalid render passes or compute passes were resulting
in 'Encoder state is locked' when calling GPUCommandEncoder.finish()
which is not so helpful. We already require an error message to get
passed, but it was being unused and not reported externally.

Correct this by passing the error message to the corresponding GPUCommandEncoder.

* Source/WebGPU/WebGPU/ComputePassEncoder.mm:
(WebGPU::ComputePassEncoder::ComputePassEncoder):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::RenderPassEncoder):

Canonical link: https://commits.webkit.org/288536@main